content updated for test

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             <option value="5">5 People</option>
             <option value="6">6 People</option>
           </select>
+  
           <input type="submit" value="Find a Table" id="submitReservation">
         </form>
         <form id="customerDetails" class="hidden">
@@ -117,6 +118,9 @@
           Provident, nulla fugiat! Temporibus magni numquam nihil aliquid molestiae, 
           necessitatibus esse impedit cum fuga autem odit atque eligendi dicta rerum consequuntur illum?
         </p>
+        <br/>
+        <br/>
+        <p>June 13, 2018 at 7pm</p>
         <button>Click Me</button>
       </div>
     </section>
@@ -165,11 +169,16 @@
         <li><a href="#">Frequent Diner</a></li>
         <li><a href="#">Gift Cards</a></li>
         <li><a href="#">Employment</a></li>
+      </ul>
+      <ul>
         <li><a href="#">Leye.com</a></li>
         <li><a href="#">Terms of Use</a></li>
         <li><a href="#">Privacy Policy</a></li>
       </ul>
     </nav>
+    <div class="appImg">
+      <img src="./images/Lettuce-App.png" alt="Lettuce App">
+    </div>
   </footer>
 </body>
 
