more styles, mobile finished

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <img src="./images/Aba-Logo.png" alt="Logo" class="logo">
     <nav>
       <ul>
-        <li><a href="#">Reserve</a></li>
-        <li><a href="#">Menu</a></li>
-        <li><a href="#">Group Dining</a></li>
-        <li><a href="#">Events</a></li>
-        <li><a href="#">Team</a></li>
+        <li><a class="link" href="#">Reserve</a></li>
+        <li><a class="link" href="#">Menu</a></li>
+        <li><a class="link" href="#">Group Dining</a></li>
+        <li><a class="link" href="#">Events</a></li>
+        <li><a class="link" href="#">Team</a></li>
       </ul>
     </nav>
     <div class="hamburger" id="hamburger" onclick="toggleNav()">
@@ -29,11 +29,11 @@
     </div>
     <div class="fullscreenNav" id="fullscreenNav">
       <div class="nav-links">
-          <a href="#">Reserve</a>
-          <a href="#">Menu</a>
-          <a href="#">Group Dining</a>
-          <a href="#">Events</a>
-          <a href="#">Team</a>
+          <a class="link" href="#">Reserve</a>
+          <a class="link" href="#">Menu</a>
+          <a class="link" href="#">Group Dining</a>
+          <a class="link" href="#">Events</a>
+          <a class="link" href="#">Team</a>
       </div>
     </div>
   </header>
@@ -105,7 +105,7 @@
           Provident, nulla fugiat! Temporibus magni numquam nihil aliquid molestiae, 
           necessitatibus esse impedit cum fuga autem odit atque eligendi dicta rerum consequuntur illum?
         </p>
-        <button>Click Me</button>
+        <button>Plan Your Party</button>
       </div>
     </section>
     <section>
@@ -121,7 +121,7 @@
         <br/>
         <br/>
         <p>June 13, 2018 at 7pm</p>
-        <button>Click Me</button>
+        <button>Learn More</button>
       </div>
     </section>
     <section>
@@ -149,8 +149,8 @@
         </p>
         <br>
         <div class="miscLink">
-          <h3><a href="">Contact</a></h3>
-          <h3><a href="">Newsletter</a></h3>
+          <h4><a class="link" href="">Contact</a></h4>
+          <h4><a class="link" href="">Newsletter</a></h4>
         </div>
       </div>
       <div class="abaLocation">
