fixed link issue

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <img src="./images/Aba-Logo.png" alt="Logo" class="logo">
     <nav>
       <ul>
-        <li><a class="link" href="#">Reserve</a></li>
-        <li><a class="link" href="#">Menu</a></li>
-        <li><a class="link" href="#">Group Dining</a></li>
-        <li><a class="link" href="#">Events</a></li>
-        <li><a class="link" href="#">Team</a></li>
+        <li><a href="#">Reserve</a></li>
+        <li><a href="#">Menu</a></li>
+        <li><a href="#">Group Dining</a></li>
+        <li><a href="#">Events</a></li>
+        <li><a href="#">Team</a></li>
       </ul>
     </nav>
     <div class="hamburger" id="hamburger" onclick="toggleNav()">
