--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </section>
   <main>
     <section>
-      <div id="reservationForm">
+      <div id="reservationForm" class="reservationForm">
         <form id="reservationDetails" class="reservationDetails">
           <h2>Make A Reservation</h2>
           <input type="date" id="date" name="date" required>
@@ -70,6 +70,7 @@
   
           <input type="submit" value="Find a Table" id="submitReservation">
         </form>
+    
         <form id="customerDetails" class="customerDetails hidden">
           <h2>Customer Information</h2>
 
