finishing layout and styling

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       </div>
       
     </section>
-    <section class="section-flex">
+    <section class="section-flex reverse">
       <div class="image-container">
         <img class="up35Reg" src="./images/up-35.jpg" alt="Food Item">
       </div>
@@ -110,9 +110,7 @@
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
           Provident, nulla fugiat! Temporibus magni numquam nihil aliquid molestiae, 
           necessitatibus esse impedit cum fuga autem odit atque eligendi dicta rerum consequuntur illum? 
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ducimus, minus expedita 
-          perspiciatis porro nihil autem tenetur incidunt impedit laboriosam inventore consequatur 
-          obcaecati aut, eaque distinctio? Vel quos maxime excepturi!
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. 
         </p>
         <button>Plan Your Party</button>
       </div>
@@ -127,9 +125,7 @@
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
           Provident, nulla fugiat! Temporibus magni numquam nihil aliquid molestiae, 
           necessitatibus esse impedit cum fuga autem odit atque eligendi dicta rerum consequuntur illum? 
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ducimus, minus expedita 
-          perspiciatis porro nihil autem tenetur incidunt impedit laboriosam inventore consequatur 
-          obcaecati aut, eaque distinctio? Vel quos maxime excepturi!
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. 
         </p>
         <br/>
         <br/>
@@ -137,19 +133,19 @@
         <button>Learn More</button>
       </div>
     </section>
-    <section class="section-flex">
+    <section class="section-flex reverse">
       <div class="image-container">
         <img class="up42" src="./images/up-42.jpg" alt="Food Item">
       </div>
       <div class="descriptionDiv">
         <h2>About Aba</h2>
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-          Provident, nulla fugiat! Temporibus magni numquam nihil aliquid molestiae, 
-          necessitatibus esse impedit cum fuga autem odit atque eligendi dicta rerum consequuntur illum? 
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ducimus, minus expedita 
-          perspiciatis porro nihil autem tenetur incidunt impedit laboriosam inventore consequatur 
-          obcaecati aut, eaque distinctio? Vel quos maxime excepturi!
+          Aba is a restaurant with a rooftop patio located in Chicago's historic Fulton Market District.
+          This is Chef CJ Jacobson's second restaurant with Lettuce Entertain You, and is 
+          an extention of Ēma (mother in Hebrew) in River North. Aba, meaning father in Hebrew, will 
+          incorporate Ēma's style of cooking with a larger influence on steak, raw and chilled seafood. 
+          The beverage program is crafted by Wine Director Ryan Arnold and Mixologist Liz Pearce and 
+          showcases Mediterranean-inspired rare wines and spirits.
         </p>
       </div>
     </section>
