--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
           Provident, nulla fugiat! Temporibus magni numquam nihil aliquid molestiae, 
           necessitatibus esse impedit cum fuga autem odit atque eligendi dicta rerum consequuntur illum? 
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur, 
+          adipisicing elit. Officia possimus explicabo accusantium blanditiis magnam reiciendis esse ratione molestias
+           itaque aliquid, nihil tenetur quaerat? Ducimus tempora quos, modi saepe fuga autem.
         </p>
         <button>Plan Your Party</button>
       </div>
@@ -125,7 +127,9 @@
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
           Provident, nulla fugiat! Temporibus magni numquam nihil aliquid molestiae, 
           necessitatibus esse impedit cum fuga autem odit atque eligendi dicta rerum consequuntur illum? 
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur, 
+          adipisicing elit. Officia possimus explicabo accusantium blanditiis magnam reiciendis esse ratione molestias
+           itaque aliquid, nihil tenetur quaerat? Ducimus tempora quos, modi saepe fuga autem.
         </p>
         <br/>
         <br/>
