fixed layout issue

--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@
           Provident, nulla fugiat! Temporibus magni numquam nihil aliquid molestiae, 
           necessitatibus esse impedit cum fuga autem odit atque eligendi dicta rerum consequuntur illum? 
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur, 
-          adipisicing elit. Officia possimus explicabo accusantium blanditiis magnam reiciendis esse ratione molestias
-           itaque aliquid, nihil tenetur quaerat? Ducimus tempora quos, modi saepe fuga autem.
+          adipisicing elit.
         </p>
         <button>Plan Your Party</button>
       </div>
@@ -128,10 +127,8 @@
           Provident, nulla fugiat! Temporibus magni numquam nihil aliquid molestiae, 
           necessitatibus esse impedit cum fuga autem odit atque eligendi dicta rerum consequuntur illum? 
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur, 
-          adipisicing elit. Officia possimus explicabo accusantium blanditiis magnam reiciendis esse ratione molestias
-           itaque aliquid, nihil tenetur quaerat? Ducimus tempora quos, modi saepe fuga autem.
+          adipisicing elit. 
         </p>
-        <br/>
         <br/>
         <p>June 13, 2018 at 7pm</p>
         <button>Learn More</button>
