--- a/index.html
+++ b/index.html
@@ -11,15 +11,19 @@
   <link rel="shortcut icon" href="#">
 </head>
 <body>
-  <header>
-    <img src="./images/Aba-Logo.png" alt="Logo" class="logo">
+  <header class="header">
+    <div class="background-overlay"></div>
+    <div class="header-content">
+      <img src="./images/Aba-Logo.wht.png" alt="Logo" class="logo-mobile">
+      <img src="./images/Aba-Logo.png" alt="Logo" class="logo">
+    </div>
     <nav>
       <ul>
-        <li><a class="link" href="#">Reserve</a></li>
-        <li><a class="link" href="#">Menu</a></li>
-        <li><a class="link" href="#">Group Dining</a></li>
-        <li><a class="link" href="#">Events</a></li>
-        <li><a class="link" href="#">Team</a></li>
+        <li><a href="#">Reserve</a></li>
+        <li><a href="#">Menu</a></li>
+        <li><a href="#">Group Dining</a></li>
+        <li><a href="#">Events</a></li>
+        <li><a href="#">Team</a></li>
       </ul>
     </nav>
     <div class="hamburger" id="hamburger" onclick="toggleNav()">
@@ -117,8 +121,8 @@
       </div>
     </section>
     <section class="section-flex">
-      <div class="image-container">
-        <img class="up35Zoom" src="./images/up-35.jpg" alt="Food Item">
+      <div class="image-container crop">
+        <img class="up35Zoom" src="./images/up-35-crop(1).png" alt="Food Item">
       </div>
       <div class="descriptionDiv">
         <h2>Wine Dinner</h2>
@@ -163,8 +167,8 @@
         </p>
         <br>
         <div class="miscLink">
-          <h4><a class="link" href="">Contact</a></h4>
-          <h4><a class="link" href="">Newsletter</a></h4>
+          <h3><a class="link" href="">Contact</a></h3>
+          <h3><a class="link" href="">Newsletter</a></h3>
         </div>
       </div>
       <div class="abaLocation">
@@ -180,14 +184,14 @@
     </div>
     <nav>
       <ul>
-        <li><a href="#">Frequent Diner</a></li>
-        <li><a href="#">Gift Cards</a></li>
-        <li><a href="#">Employment</a></li>
+        <li><a class="link" href="#">Frequent Diner</a></li>
+        <li><a class="link" href="#">Gift Cards</a></li>
+        <li><a class="link" href="#">Employment</a></li>
       </ul>
       <ul>
-        <li><a href="#">Leye.com</a></li>
-        <li><a href="#">Terms of Use</a></li>
-        <li><a href="#">Privacy Policy</a></li>
+        <li><a class="link" href="#">Leye.com</a></li>
+        <li><a class="link" href="#">Terms of Use</a></li>
+        <li><a class="link" href="#">Privacy Policy</a></li>
       </ul>
     </nav>
     <div class="appImg">
