--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div id="successMessage" class="hidden overlay">
           <h2>Reservation Successful!</h2>
           <p>Thank you for your reservation.</p>
-          <p>A confirmation email will sent to you shortly</p>
+          <p>A confirmation email will be sent to you shortly</p>
           <span class="closeButton" id="closeButton">
             ×
           </span>
@@ -122,7 +122,7 @@
     </section>
     <section class="section-flex">
       <div class="image-container crop">
-        <img class="up35Zoom" src="./images/up-35-crop(1).png" alt="Food Item">
+        <img class="up35Zoom" src="./images/up-35-crop.png" alt="Food Item">
       </div>
       <div class="descriptionDiv">
         <h2>Wine Dinner</h2>
