--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </section>
     <section class="section-flex">
       <div class="image-container crop">
-        <img class="up35Zoom" src="./images/up-35-crop.png" alt="Food Item">
+        <img class="up35Zoom" src="./images/up-35-cropped.jpg" alt="Food Item">
       </div>
       <div class="descriptionDiv">
         <h2>Wine Dinner</h2>
