--- a/index.html
+++ b/index.html
@@ -201,6 +201,6 @@
 </body>
 
 
-  <script type="text/css" src="./index.js" defer></script>
+  <script src="./index.js" defer></script>
 </body>
 </html>
